# BPDA

./: .gitignore  README.md
assignment/: .gitignore
assignment/football-renter/: Cargo.toml
assignment/football-renter/interact/: deploy-devnet.interaction.json  devnet.snippets.sh  mxpy.data-storage.json
assignment/football-renter/interactor/tests/: interact_cs_tests.rs
assignment/football-renter/meta/: Cargo.toml
assignment/football-renter/output/: football-renter.imports.json
assignment/football-renter/src/: events.rs  football_renter.rs  storage.rs
assignment/football-renter/tests/: football_renter_scenario_go_test.rs  football_renter_scenario_rs_test.rs
assignment/football-renter/wasm/: Cargo.toml
assignment/football-renter/wasm/src/: lib.rs
football-renter/: sc-config.toml
football-renter/interact/: deploy-devnet.interaction.json  devnet.snippets.sh  mxpy.data-storage.json
football-renter/interactor/: Cargo.toml  state.toml
football-renter/interactor/src/: football_renter_proxy.rs  interact.rs  interactor_main.rs
football-renter/interactor/tests/: interact_cs_tests.rs  (+1 more)
football-renter/output/: football-renter.abi.json  football-renter.imports.json  football-renter.mxsc.json  football-renter.wasm  football_renter_proxy.rs
football-renter/scenarios/: football_renter.scen.json
football-renter/src/: football_renter.rs  storage.rs
project/distributed-computing/: .gitignore  Cargo.toml  sc-config.toml
project/distributed-computing-dapp/: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts  worker.py  workflow_state_diagram.puml
(+64 files in other folders)
